@@ -6,6 +6,11 @@
   or spelling correction your name will probably not be listed.)
 
 ****************************   Release 1.1  ******************************
+pam-script 1.1.5		Jeroen Nijhof	<jeroen@nijhofnet.nl>
+	* fixed an expression in function pam_sm_chauthtok() used ==
+	  for flags instead of a binary logic bit operator, report and
+	  fix by Mikolaj Kucharski. 
+
 pam-script 1.1.4		Jeroen Nijhof	<jeroen@nijhofnet.nl>
 	* Moved the manpage to the correct path
 	* fixed bug 2871389 - pam_sm_chauthtok() should first set
